--- a/index.html
+++ b/index.html
@@ -11,13 +11,18 @@
 
     <link rel="stylesheet" href="./style/style.css">
 </head>
-<body>
+<body class="">
     <header>
         <div class="header-container">
+            <div class="logo-box">
             <div class="logo">
                 <img src="https://kajabi-storefronts-production.kajabi-cdn.com/kajabi-storefronts-production/themes/284832/settings_images/rLlCifhXRJiT0RoN2FjK_Logo_roundbackground_black.png" />
             </div>
             <span>CleverJobs</span>
+            </div>
+        <label class="switch">
+            <span class="slider round"></span>
+          </label>
         </div>
     </header>
     <div class="search">
